# Volatility-Predictor

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile.api  healthcheck.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  icon.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: ApiStatusBadge.tsx  FadeIn.tsx  ModelComparisonChart.tsx  PageLoading.tsx  PredictionHistoryChart.tsx  RiskBadge.tsx  Spinner.tsx  StatTile.tsx  TickerDetailClient.tsx  TickerListClient.tsx
frontend/src/lib/: api.ts  modelLabels.ts  riskLevel.ts  types.ts
pipelines/: ingest_daily.py  train_model.py
src/volatility_platform/api/: dependencies.py  main.py  middleware.py  schemas.py
src/volatility_platform/config/: settings.py
src/volatility_platform/data_providers/: base.py  yfinance_provider.py
src/volatility_platform/domain/: exceptions.py  models.py
src/volatility_platform/features/: pipeline.py  returns.py  volatility.py
src/volatility_platform/ml/: evaluation.py  predict.py  registry.py  train.py
src/volatility_platform/repositories/: base.py  (+4 more)
tests/: conftest.py
tests/integration/: test_api.py  test_ingestion_service.py  test_model_repository.py  test_prediction_repository.py  test_prediction_service.py  test_price_repository.py  test_training_service.py
tests/unit/: test_data_providers.py  test_domain_models.py  test_features.py  test_ml_evaluation.py  test_ml_predict.py  test_ml_registry.py  test_ml_train.py
(+13 files in other folders)
